Create spreed svg and add to section feature icons

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 <h2 class="feature-title visually-hidden">Feature</h2>
                 <ul class="feature-list">
                     <li class="feature-item">
+                        <div class="feature-box">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-item-title">Strategy</h3>
                         <p class="feature-text">Our goal is to identify the business problem to walk away with the
                             perfect
@@ -64,6 +69,11 @@
                         </p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-box">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-item-title">Punctuality</h3>
                         <p class="feature-text">Bring the key message to the brand's audience for the best price within
                             the
@@ -71,12 +81,22 @@
                             time.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-box">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-item-title">Diligence</h3>
                         <p class="feature-text">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-box">
+                            <svg class="feature-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-item-title">Technologies</h3>
                         <p class="feature-text">Design practice focused on digital experiences. We bring forth a deep
                             passion for
