add links to social network

--- a/index.html
+++ b/index.html
@@ -279,6 +279,12 @@
                             <h3 class="card-name">Banking App</h3>
                             <p class="card-type">App</p>
                         </div>
+                        <div class="portfolio-overlay">
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-cashless-payment.jpg" alt="Card Cashless Payment" width="360"
@@ -286,6 +292,12 @@
                         <div class="portfolio-label">
                             <h3 class="card-name">Cashless Payment</h3>
                             <p class="card-type">Marketing</p>
+                        </div>
+                        <div class="portfolio-overlay">
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -295,12 +307,24 @@
                             <h3 class="card-name">Meditation App</h3>
                             <p class="card-type">App</p>
                         </div>
+                        <div class="portfolio-overlay">
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-taxi-service.jpg" alt="Card Taxi Service" width="360" height="300">
                         <div class="portfolio-label">
                             <h3 class="card-name">Taxi Service</h3>
                             <p class="card-type">Marketing</p>
+                        </div>
+                        <div class="portfolio-overlay">
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -310,6 +334,12 @@
                             <h3 class="card-name">Screen Illustrations</h3>
                             <p class="card-type">Design</p>
                         </div>
+                        <div class="portfolio-overlay">
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-online-courses.jpg" alt="Card Online Courses" width="360"
@@ -317,6 +347,12 @@
                         <div class="portfolio-label">
                             <h3 class="card-name">Online Courses</h3>
                             <p class="card-type">Marketing</p>
+                        </div>
+                        <div class="portfolio-overlay">
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                Manager App · Calorie Tracker App
+                                · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
                         </div>
                     </li>
                 </ul>
@@ -326,11 +362,52 @@
     </main>
     <!------------------- Footer (Footer section) ------------------->
     <footer class="footer-section">
-        <div class="container">
-            <a class="logo-footer" href="./index.html">Web<span class="logo-footer-studio">Studio</span></a>
-            <p class="footer-description">Increase the flow of customers and sales for your business with digital
-                marketing
-                & growth solutions.</p>
+        <div class="container footer-container">
+            <div class="info-footer">
+                <a class="logo-footer" href="./index.html">Web<span class="logo-footer-studio">Studio</span></a>
+                <p class="footer-description">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    & growth solutions.</p>
+            </div>
+
+            <div class="social-footer">
+                <p class="social-footer-title">Social media</p>
+                <ul class="social-list">
+                    <li class="social-item">
+                        <a class="social-link" href="">
+                            <svg class="social-icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="">
+                            <svg class="social-icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="">
+                            <svg class="social-icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="">
+                            <svg class="social-icon" height="20" width="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
+
+
+
         </div>
     </footer>
 
