Correct header link and change hover for card

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 <body>
     <!------------------- Header (Header section) ------------------->
     <header class="header">
-
         <div class="container header-content">
             <nav class="header-nav">
                 <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
                 <ul class="header-menu">
-                    <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
+                    <li class="menu-item"><a class="menu-link current" href="./index.html">Studio</a></li>
                     <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
                     <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
                 </ul>
@@ -41,7 +40,6 @@
         </div>
 
     </header>
-
 
     <main>
         <!------------------- Hero (First section) ------------------->
@@ -121,28 +119,28 @@
                             <ul class="social-list">
                                 <li class="social-item">
                                     <a class="social-link" href="">
-                                        <svg class="social-icon" height="20" width="20">
+                                        <svg class="social-icon" height="16" width="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a class="social-link" href="">
-                                        <svg class="social-icon" height="20" width="20">
+                                        <svg class="social-icon" height="16" width="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a class="social-link" href="">
-                                        <svg class="social-icon" height="20" width="20">
+                                        <svg class="social-icon" height="16" width="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-item">
                                     <a class="social-link" href="">
-                                        <svg class="social-icon" height="20" width="20">
+                                        <svg class="social-icon" height="16" width="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -274,89 +272,91 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-banking-app.jpg" alt="Card Banking App" width="360" height="300">
-                        <div class="portfolio-label">
-                            <h3 class="card-name">Banking App</h3>
-                            <p class="card-type">App</p>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                        <div class="portfolio-card">
+                            <img src="./images/portfolio-banking-app.jpg" alt="Card Banking App" width="360"
+                                height="300">
+                            <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
+                            <div class="portfolio-label">
+                                <h3 class="card-name">Banking App</h3>
+                                <p class="card-type">App</p>
+                            </div>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-cashless-payment.jpg" alt="Card Cashless Payment" width="360"
-                            height="300">
-                        <div class="portfolio-label">
-                            <h3 class="card-name">Cashless Payment</h3>
-                            <p class="card-type">Marketing</p>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                        <div class="portfolio-card">
+                            <img src="./images/portfolio-cashless-payment.jpg" alt="Card Cashless Payment" width="360"
+                                height="300">
+                            <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
+                            <div class="portfolio-label">
+                                <h3 class="card-name">Cashless Payment</h3>
+                                <p class="card-type">Marketing</p>
+                            </div>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-meditation-app.jpg" alt="Card Meditation App" width="360"
-                            height="300">
-                        <div class="portfolio-label">
-                            <h3 class="card-name">Meditation App</h3>
-                            <p class="card-type">App</p>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                        <div class="portfolio-card">
+                            <img src="./images/portfolio-meditation-app.jpg" alt="Card Meditation App" width="360"
+                                height="300">
+                            <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
+                            <div class="portfolio-label">
+                                <h3 class="card-name">Meditation App</h3>
+                                <p class="card-type">App</p>
+                            </div>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-taxi-service.jpg" alt="Card Taxi Service" width="360" height="300">
-                        <div class="portfolio-label">
-                            <h3 class="card-name">Taxi Service</h3>
-                            <p class="card-type">Marketing</p>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                        <div class="portfolio-card">
+                            <img src="./images/portfolio-taxi-service.jpg" alt="Card Taxi Service" width="360"
+                                height="300">
+                            <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
+                            <div class="portfolio-label">
+
+                                <h3 class="card-name">Taxi Service</h3>
+                                <p class="card-type">Marketing</p>
+                            </div>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-screen-illustrations.jpg" alt="Card Screen Illustrations"
-                            width="360" height="300">
-                        <div class="portfolio-label">
-                            <h3 class="card-name">Screen Illustrations</h3>
-                            <p class="card-type">Design</p>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                        <div class="portfolio-card">
+                            <img src="./images/portfolio-screen-illustrations.jpg" alt="Card Screen Illustrations"
+                                width="360" height="300">
+                            <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
+                            <div class="portfolio-label">
+                                <h3 class="card-name">Screen Illustrations</h3>
+                                <p class="card-type">Design</p>
+                            </div>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/portfolio-online-courses.jpg" alt="Card Online Courses" width="360"
-                            height="300">
-                        <div class="portfolio-label">
-                            <h3 class="card-name">Online Courses</h3>
-                            <p class="card-type">Marketing</p>
-                        </div>
-                        <div class="portfolio-overlay">
-                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                        <div class="portfolio-card">
+                            <img src="./images/portfolio-online-courses.jpg" alt="Card Online Courses" width="360"
+                                height="300">
+                            <p class="portfolio-overlay">14 Stylish and User-Friendly App Design Concepts · Task
                                 Manager App · Calorie Tracker App
                                 · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
+                            <div class="portfolio-label">
+                                <h3 class="card-name">Online Courses</h3>
+                                <p class="card-type">Marketing</p>
+                            </div>
                         </div>
                     </li>
                 </ul>
-
             </div>
         </section>
     </main>
@@ -372,31 +372,31 @@
 
             <div class="social-footer">
                 <p class="social-footer-title">Social media</p>
-                <ul class="social-list">
-                    <li class="social-item">
-                        <a class="social-link" href="">
-                            <svg class="social-icon" height="20" width="20">
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" height="24" width="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item">
-                        <a class="social-link" href="">
-                            <svg class="social-icon" height="20" width="20">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" height="24" width="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item">
-                        <a class="social-link" href="">
-                            <svg class="social-icon" height="20" width="20">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" height="24" width="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item">
-                        <a class="social-link" href="">
-                            <svg class="social-icon" height="20" width="20">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="">
+                            <svg class="footer-social-icon" height="24" width="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
